<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/spacing_medium">

    <!-- Left Column: Vehicle Details -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <!-- Vehicle Type -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_vehicle_type"
            android:textColor="@color/label_text"
            android:textSize="@dimen/text_size_normal"
            android:layout_marginBottom="@dimen/spacing_small"/>

        <Spinner
            android:id="@+id/spinnerVehicleType"
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_height"
            android:background="@drawable/bg_input"
            android:padding="@dimen/input_padding"
            android:layout_marginBottom="@dimen/spacing_small"/>

        <TextView
            android:id="@+id/tvVehicleTypeDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/secondary_text"
            android:textSize="@dimen/text_size_small"
            android:textStyle="italic"
            android:layout_marginBottom="@dimen/spacing_medium"
            android:visibility="gone"/>

        <!-- Model -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_vehicle_model"
            android:textColor="@color/label_text"
            android:textSize="@dimen/text_size_normal"
            android:layout_marginBottom="@dimen/spacing_small"/>

        <EditText
            android:id="@+id/etModel"
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_height"
            android:background="@drawable/bg_input"
            android:hint="@string/hint_vehicle_model"
            android:textColor="@color/input_text"
            android:textColorHint="@color/input_hint"
            android:padding="@dimen/input_padding"
            android:layout_marginBottom="@dimen/spacing_medium"
            android:inputType="text"/>

        <!-- License Plate -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_license_plate"
            android:textColor="@color/label_text"
            android:textSize="@dimen/text_size_normal"
            android:layout_marginBottom="@dimen/spacing_small"/>

        <EditText
            android:id="@+id/etLicensePlate"
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_height"
            android:background="@drawable/bg_input"
            android:hint="@string/hint_license_plate"
            android:textColor="@color/input_text"
            android:textColorHint="@color/input_hint"
            android:padding="@dimen/input_padding"
            android:layout_marginBottom="@dimen/spacing_medium"
            android:inputType="textCapCharacters"/>

        <!-- Number of Seats -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_number_of_seats"
            android:textColor="@color/label_text"
            android:textSize="@dimen/text_size_normal"
            android:layout_marginBottom="@dimen/spacing_small"/>

        <EditText
            android:id="@+id/etNumberOfSeats"
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_height"
            android:background="@drawable/bg_input"
            android:hint="@string/hint_number_of_seats"
            android:textColor="@color/input_text"
            android:textColorHint="@color/input_hint"
            android:padding="@dimen/input_padding"
            android:inputType="number"/>

    </LinearLayout>

    <!-- Right Column: Additional Services -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginStart="@dimen/spacing_xlarge"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_additional_services"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/text_size_large"
            android:textStyle="bold"
            android:layout_marginBottom="@dimen/spacing_large"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvAdditionalServices"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</LinearLayout>
